Add hover effect on project status table

--- a/less/lightspeed-style.less
+++ b/less/lightspeed-style.less
@@ -262,3 +262,23 @@ input:focus, textarea:focus, select:focus {
     color: @color-white !important;
     background-color: @color-waterfall-dark !important;
 }
+
+// Hover on project table
+
+#projectstatus tr:hover {
+  background-color: #f0f0f0 !important;
+
+  td {
+    background-color: #f0f0f0 !important;
+  }
+}
+
+#projectstatus .healthReportDetails table tbody tr td {
+    background-color: @color-white !important;
+    color: @color-text !important;
+}
+
+#projectstatus .healthReportDetails table tbody tr:hover td {
+    background-color: @color-white !important;
+    color: @color-text !important;
+}
